--- a/src/main/resources/templates/job-detail.html
+++ b/src/main/resources/templates/job-detail.html
@@ -10,6 +10,31 @@
 
     <!-- // TODO #2 - display the job fields, one per row -->
 
+    <table class="table" th:object="${job}">
+
+        <tr>
+            <td>NAME:</td>
+            <td th:text="*{name}"></td>
+        </tr>
+        <tr>
+            <td>EMPLOYER:</td>
+            <td th:text="*{employer}"></td>
+        </tr>
+        <tr>
+            <td>LOCATION:</td>
+            <td th:text="*{location}"></td>
+        </tr>
+        <tr>
+            <td>POSITION TYPE:</td>
+            <td th:text="*{positionType}"></td>
+        </tr>
+        <tr>
+            <td>CORE COMPETENCY:</td>
+            <td th:text="*{coreCompetency}"></td>
+        </tr>
+
+    </table>
+
 </div>
 
 </body>
